# journal

./: Cargo.toml  Dioxus.toml  justfile  package-lock.json  package.json  tailwind.css
assets/: editor.js  tailwind.css
src/: main.rs  mdast_to_html.rs
src/components/: biscroll.rs  editor.rs  mod.rs
src/pages/: edit.rs  home.rs  mod.rs
