[package]
name = "journal"
version = "0.1.0"
authors = ["CircuitSacul <me@circuitsacul.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.0", features = ["router"] }
futures = "0.3.31"
futures-timer = "3.0.3"
markdown = "1.0.0"
rand = "0.9.1"
serde_json = "1.0.140"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
